tui/src/ui/snapshots/skill_book__ui__search_panel__tests__snapshot_empty_query.snap
---
source: tui/src/ui/search_panel.rs
assertion_line: 105
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 20 },
    content: [
        "┌Search Catalog────────────────────────────────────────────────────────────────┐",
        "│┌Query───────────────────────────────────────────────────────────────────────┐│",
        "│││                                                                           ││",
        "│└────────────────────────────────────────────────────────────────────────────┘│",
        "│┌Results──────────────────────┐┌Preview──────────────────────────────────────┐│",
        "││                             ││No results                                   ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "││                             ││                                             ││",
        "│└─────────────────────────────┘└─────────────────────────────────────────────┘│",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
